--- a/package.json
+++ b/package.json
@@ -43,8 +43,8 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "eslint": "^9.39.2",
-    "eslint-config-next": "^16.0.10",
+    "eslint": "^8.57.1",
+    "eslint-config-next": "13.5.4",
     "postcss": "^8",
     "prisma": "^6.0.0",
     "tailwindcss": "^3.4.1",
